changed presence to presents

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@ layout: default
     {% endfor %}
   </ul>
 
-  <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>
-
 </div>
+
+<p> follow me on Medium </p> 
+<script async src="https://static.medium.com/embed.js"></script><a class="m-profile" href="https://medium.com/@lashinskynick">Nick Lashinsky</a>
+<p> 
+<p class="rss-subscribe">or subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>
